manifests.yaml
---
# Source: dummy-go-app/charts/podinfo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-go-app-dev-podinfo
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
---
# Source: dummy-go-app/charts/podinfo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-go-app-dev-podinfo
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dummy-go-app-dev-podinfo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dummy-go-app-dev-podinfo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9898"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: podinfo
          image: "ghcr.io/stefanprodan/podinfo:6.9.4"
          imagePullPolicy: Always
          command:
            - ./podinfo
            - --port=9898
            - --cert-path=/data/cert
            - --port-metrics=9797
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --level=debug
            - --random-delay=false
            - --random-error=false
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 32Mi
      volumes:
      - name: data
        emptyDir: {}
---
# Source: dummy-go-app/charts/podinfo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-go-app-dev-podinfo
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "podinfo-dev.localhost"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: dummy-go-app-dev-podinfo
                port:
                  number: 9898
---
# Source: dummy-go-app/charts/podinfo/templates/tests/grpc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-go-app-dev-podinfo-grpc-test-mdrjp
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    sidecar.istio.io/inject: "false"
    linkerd.io/inject: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
spec:
  containers:
    - name: grpc-health-probe
      image: stefanprodan/grpc_health_probe:v0.3.0
      command: ['grpc_health_probe']
      args:  ['-addr=dummy-go-app-dev-podinfo.dummy-app-dev:9999']
  restartPolicy: Never
---
# Source: dummy-go-app/charts/podinfo/templates/tests/jwt.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-go-app-dev-podinfo-jwt-test-0b4ek
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    sidecar.istio.io/inject: "false"
    linkerd.io/inject: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
spec:
  containers:
    - name: tools
      image: giantswarm/tiny-tools
      command:
        - sh
        - -c
        - |
          TOKEN=$(curl -sd 'test' ${PODINFO_SVC}/token | jq -r .token) &&
          curl -sH "Authorization: Bearer ${TOKEN}" ${PODINFO_SVC}/token/validate | grep test
  restartPolicy: Never
---
# Source: dummy-go-app/charts/podinfo/templates/tests/service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-go-app-dev-podinfo-service-test-bwb9w
  namespace: dummy-app-dev
  labels:
    helm.sh/chart: podinfo-6.9.4
    app.kubernetes.io/name: dummy-go-app-dev-podinfo
    app.kubernetes.io/version: "6.9.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    sidecar.istio.io/inject: "false"
    linkerd.io/inject: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.69.0
      command:
        - sh
        - -c
        - |
          curl -s ${PODINFO_SVC}/api/info | grep version
  restartPolicy: Never
